crates/test-files/fixtures/compile_errors/missing_self.fe
contract Foo:
    fn pure_fn():
        self.mut_fn()

    fn mut_fn(self):
        pass